Release Contender v1.1.0 with concurrent round-robin tournaments
Upgrade to Paper 26.2 and Java 25, remove Noxesium, and manage duel states
through listener lifecycles. Hide nearby spectators from contestants.

Add FAWE map templates and prepared arena pools, native Dialog controls,
concurrent round-robin scheduling, offline rosters, and a standings board.
Keep elimination decisions under the director's control.

Add persistent player roles, configurable role nametags, and recovered
Tierer integration with retired tier labels. Include setup documentation,
the recovered Tierer source, and Contender-v1.1.0.jar.

Validation: 72 tests passed; committed plugin sources match the verified
build. Live Paper testing remains for profile lookup and visual features.